Regression: Viscoelastic Springs does not work #113851

Closed
opened 2023-10-17 17:36:10 +02:00 by Esteban · 2 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-16 20:26, hash: bbf87ee78c42
Worked: 3.6

Caused by 425b871607

Short description of error

Viscoelastic Springs option does not seem to work in Blender 4.0

Exact steps for others to reproduce the error

create a Fluid particle system and add Springs and then activate the Viscoelastic Springs option.

in the video you can see how it works in 3.6, and how it does not work in 4.0.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-16 20:26, hash: `bbf87ee78c42` Worked: 3.6 Caused by 425b871607 **Short description of error** Viscoelastic Springs option does not seem to work in Blender 4.0 **Exact steps for others to reproduce the error** create a Fluid particle system and add Springs and then activate the Viscoelastic Springs option. in the video you can see how it works in 3.6, and how it does not work in 4.0.
Esteban added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-17 17:36:10 +02:00
Member

Thanks for the report. I can confirm the regression

Thanks for the report. I can confirm the regression
Member
Caused by 425b87160716276ab2583f035b0c67c59dcd526e @HooglyBoogly ^
Pratik Borhade added this to the 4.0 milestone 2023-10-18 07:58:29 +02:00
Pratik Borhade changed title from Viscoelastic Springs does not work in blender 4.0 to Regression: Viscoelastic Springs does not work 2023-10-18 07:58:48 +02:00
Hans Goudey self-assigned this 2023-10-18 08:31:27 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-20 16:48:30 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-10-20 17:29:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113851
No description provided.